# ewlin

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  TUTORIAL.md  docker-compose.prod-lgi.yml  docker-compose.prod-sipap.yml  docker-compose.prod.yml  docker-compose.sonarqube.yml  docker-compose.yml  flux_scheduler_2026-03-19.sql  minimap-playground.html  package.json  playground-autoplace-modal.html  playground-command-center-v2.html  playground-command-center.html  playground-jcf-header-layout.html  playground-job-details.html  playground-keyboard-shortcuts.html  playground-operator-full-ux.html  playground-operator-station.html  playground-outsourced-tile.html  playground-pinned-flux-indicator.html  playground-prereq-date-display.html  playground-progress-dots.html  playground-scheduler.html  playground-split-tile-variants.html  playground-split-tile.html  playground-station-schedule-editor.html  playground-tile-selection.html  playground-tile-split.html  playground-tooltips.html  pnpm-lock.yaml  pnpm-workspace.yaml  schedule-scoring-playground.html  (+2 more)
services/solver/: Dockerfile  pyproject.toml
services/solver/flux_solver/: __main__.py  cli.py  main.py  streaming.py
services/solver/flux_solver/models/: __init__.py  snapshot.py  solution.py
services/solver/flux_solver/modes/: compact.py  strategic.py
services/solver/flux_solver/solver/: builder.py  constraints.py  decomposition.py  objective.py  working_time.py
services/solver/tests/: test_strategic.py  test_working_time.py
(+1198 files in other folders)
