[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flux-solver"
version = "0.1.0"
description = "CP-SAT solver service for Flux Scheduler"
requires-python = ">=3.11"
dependencies = [
    "ortools>=9.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
service = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
flux-solver = "flux_solver.cli:main"
